syntax = "proto2";

option java_package = "com.jet.datasync.bdcor3.proto";
option java_outer_classname = "PipScmFrozentubeProtos";

message TransPipScmFrozentubes {

    repeated PipScmFrozentube pipScmFrozentubes = 1;

    message PipScmFrozentube {
        required string project_id = 1;
        required string tube_code = 2;
        required string tube_type = 3;
        required string box_code = 4;
        required string box_type = 5;
        required int32 box_colno = 6;
        required int32 box_rowno = 7;
        required string blood_code = 8;
        required string lcc_code = 9;
        optional int32 is_hemolysis = 10 [default = 2];
        optional int32 is_lipid = 11 [default = 2];
        optional int32 is_empty = 12;
        optional string id = 13;
        optional string version = 14;
        optional string client_id = 15;
        optional string file_name = 16;
        optional string terminal_id = 17;
        optional int32 update_flag = 18;
        optional int64 hr3_update_date = 19;
        optional int64 trans_date = 20;
        optional int64 create_date = 21;
        optional string create_by = 22;
        optional string remark = 23;
    }
}
